[package]
name = "rusty"
version = "0.1.0"
authors = ["Robert Roland <robert@robertroland.org>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.3"
spin = "0.4.6"
multiboot2 = "0.3.2"
bitflags = "0.9.1"
x86_64 = "0.1.2"
once = "0.3.3"

[dependencies.bump_allocator]
path = "libs/bump_allocator"
