[package]
name = "rusty"
version = "0.1.0"
authors = ["Robert Roland <robert@robertroland.org>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.3"
spin = "0.4.6"
multiboot2 = "0.3.2"
bitflags = "0.9.1"
x86_64 = "0.1.2"
once = "0.3.3"
bit_field = "0.7.0"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"
