[package]
name = "hole_list_allocator"
version = "0.1.0"
authors = ["Robert Roland <rob.roland@gmail.com>"]

[dependencies]
linked_list_allocator = { git = "https://github.com/phil-opp/linked-list-allocator.git"}
spin = "0.4.6"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]
